Fixed Responsiveness on mobile

--- a/index.css
+++ b/index.css
@@ -31,3 +31,32 @@ td{
     padding: 10px;
     border: 0;
 }
+
+@media screen and (max-width: 900px) {
+    .container{
+        width:50vw;
+        height: 50vh;
+        gap: 0;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .container{
+        width:100vw;
+        height: 50vh;
+        gap: 0;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .container{
+        width:100vw;
+        height: 50vh;
+        gap: 0;
+    }
+}
+
+
+
+
+
